fix: Adjust be compliant with the project standards