@@ -22,8 +22,16 @@ public class WalletServiceImpl implements DebtWalletService {
     private final WalletPersistencePort persistencePort;
     private final WalletMapperView viewMapper;
 
-    private final User user = new User(UUID.fromString("fd4437c0-bda6-489d-964f-7e43169cace0"), "Ricardo",
-            "ricardo@mail.com", PlanRole.FREE, UserRole.LAWYER);
+    private final User user = new User(
+            UUID.fromString("fd4437c0-bda6-489d-964f-7e43169cace0"),
+            "Ricardo",
+            "ricardo@mail.com",
+            "ricardo",
+            "password",
+            true,
+            PlanRole.FREE,
+            java.util.Set.of(UserRole.LAWYER),
+            java.util.Set.of());
 
     @Override
     public UUID getLoggedUseId() {
@@ -37,14 +45,14 @@ public class WalletServiceImpl implements DebtWalletService {
 
     @Override
     public WalletView createWalletView(UUID userId, String name) {
-        var wallet = new Wallet(UUID.randomUUID(), name, LocalDateTime.now(), userId);
+        var wallet = new Wallet(UUID.randomUUID(), name, LocalDateTime.now(), userId, null);
         var savedWallet = persistencePort.saveWallet(wallet);
         return viewMapper.mapToWalletView(savedWallet);
     }
 
     @Override
     public DebtorView createDebtorView(String name, String email) {
-        var debtor = new Debtor(UUID.randomUUID(), name, null, null, email, null, null, LocalDateTime.now());
+        var debtor = new Debtor(UUID.randomUUID(), name, null, null, email, null, null, LocalDateTime.now(), null);
         var savedDebtor = persistencePort.saveDebtor(debtor);
         return viewMapper.mapToDebtorView(savedDebtor);
     }
@@ -56,6 +64,7 @@ public class WalletServiceImpl implements DebtWalletService {
                 debtView.walletId(),
                 debtView.debtorId(),
                 userId,
+                null, // workspaceId
                 debtView.name(),
                 debtView.email(),
                 debtView.description(),
@@ -63,7 +72,7 @@ public class WalletServiceImpl implements DebtWalletService {
                 LocalDateTime.now(),
                 DebtStatus.OPEN,
                 debtView.paymentType(),
-                List.of());
+                java.util.Collections.emptyList());
         var savedDebt = persistencePort.saveDebt(debt);
         return viewMapper.mapToDebtView(savedDebt);
     }
